b=252006; bookmarks with old favicon urls dont get properly updated/handled; r=mconnor